RESOLVED FIXED73467
[WK2][Qt] AC animation startTime is wrong
https://bugs.webkit.org/show_bug.cgi?id=73467
Summary [WK2][Qt] AC animation startTime is wrong
Igor Trindade Oliveira
Reported 2011-11-30 10:48:09 PST
When WebProcess sends animation information to UIProcess, It uses the current time(WTF::currentTime) minus the timeOffset to set the start time animation. But there is a latency between the WebProcess and UIProcess communication and sometimes the animation transition starts late.
Attachments
Patch (3.22 KB, patch)
2011-11-30 10:55 PST, Igor Trindade Oliveira
no flags
Igor Trindade Oliveira
Comment 1 2011-11-30 10:55:28 PST
Created attachment 117221 [details] Patch Proposed patch.
WebKit Review Bot
Comment 2 2011-11-30 20:02:55 PST
Comment on attachment 117221 [details] Patch Clearing flags on attachment: 117221 Committed r101595: <http://trac.webkit.org/changeset/101595>
WebKit Review Bot
Comment 3 2011-11-30 20:02:59 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.